All changes until 06/07/2016
- ProjectVC deprecated
- ProjectUI deprecated
- Task UI Improved. MDTab bar added.
- EventVC improved, features added.
- CustomCell bug fixed. Crash fixed.
- Popover transition implemented. Delegate bug fixed.
- Other small changes.

Notes:
After WWDC, I will make major improvement to this app. Some of the current features will be deprecated or altered. This version or the next commit will be submitted to the app store.

--- a/Done!/CellDescriptor2.plist
+++ b/Done!/CellDescriptor2.plist
@@ -43,7 +43,7 @@
 			<key>isExpandable</key>
 			<true/>
 			<key>isExpanded</key>
-			<true/>
+			<false/>
 			<key>isVisible</key>
 			<true/>
 			<key>value</key>
