--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c 
 osx_image: xcode8
-script: xcodebuild -workspace Done!.xcworkspace -scheme Done! -sdk iphonesimulator10.0
+script: xcodebuild -workspace Done!.xcworkspace -scheme Done!
