--- a/Done!.xcodeproj/xcshareddata/xcschemes/Done! Apple Watch.xcscheme
+++ b/Done!.xcodeproj/xcshareddata/xcschemes/Done! Apple Watch.xcscheme
@@ -34,6 +34,20 @@
                ReferencedContainer = "container:Done!.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0083154C1CDE8FDB003E706D"
+               BuildableName = "Done! Apple Watch Extension.appex"
+               BlueprintName = "Done! Apple Watch Extension"
+               ReferencedContainer = "container:Done!.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -42,6 +56,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "003A9CB01D57ECAB00271737"
+               BuildableName = "DoneTests.xctest"
+               BlueprintName = "DoneTests"
+               ReferencedContainer = "container:Done!.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "003A9CBE1D57ECB800271737"
+               BuildableName = "DoneUITests.xctest"
+               BlueprintName = "DoneUITests"
+               ReferencedContainer = "container:Done!.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
@@ -68,7 +102,7 @@
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.carousel"
-         RemotePath = "/Done">
+         RemotePath = "/Done!">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "008315401CDE8FDB003E706D"
@@ -98,7 +132,7 @@
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.carousel"
-         RemotePath = "/Done">
+         RemotePath = "/Done!">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "008315401CDE8FDB003E706D"
