--- a/Done!.xcodeproj/xcshareddata/xcschemes/Done!.xcscheme
+++ b/Done!.xcodeproj/xcshareddata/xcschemes/Done!.xcscheme
@@ -32,6 +32,26 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "006083601CC4007500A344F1"
+               BuildableName = "Done!Tests.xctest"
+               BlueprintName = "Done!Tests"
+               ReferencedContainer = "container:Done!.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0060836B1CC4007500A344F1"
+               BuildableName = "Done!UITests.xctest"
+               BlueprintName = "Done!UITests"
+               ReferencedContainer = "container:Done!.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "003A9CB01D57ECAB00271737"
                BuildableName = "DoneTests.xctest"
                BlueprintName = "DoneTests"
@@ -82,6 +102,16 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocStackLogging"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
