--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: objective-c 
-osx_image: xcode8
-script: xcodebuild -workspace Done!.xcworkspace -scheme Done!
+osx_image: xcode8.1
+xcode_project: Done!.xcodeproj 
+xcode_scheme: Done! 
+xcode_sdk: iphonesimulator10.1 
